fix modal styling to work better on mobile

--- a/src/styles/layout/_modal.scss
+++ b/src/styles/layout/_modal.scss
@@ -19,11 +19,12 @@
   color: #fff;
   flex: 1 1 auto;
   padding: 0 15px;
+  font-size: $fontSmall;
 }
 
 .modal__button {
-  width: 65px;
   color: $white;
+  flex: 1 1 auto;
 
   &--primary {
     background: $black;
@@ -35,7 +36,6 @@
     border-radius: 0 4px 4px 0;
     border: 1px solid $primaryColor;
     background: $primaryColor;
-    width: 40px;
     font-size: 25px;
   }
 }
